[package]
name = "bravo-rwlock-rs"
version = "0.1.0"
edition = "2021"
authors = ["Yiwei Yang <yangyw@shanghaitech.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
seahash = "4.1.0"
smallvec = "1.6.1"
crossbeam-utils = "0.8.5"
crossbeam-epoch = "0.9.5"
num_cpus = "1.13.0"
libc = "0.2.101" 