[package]
name = "bravo-rwlock-rs"
version = "0.1.0"
edition = "2021"
authors = ["Yiwei Yang <yangyw@shanghaitech.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "^0"
seahash = "4.1.0"
coarsetime = "^0"
gettid = "^0"
num_cpus = "1.13.0"
libc = "0.2.101"

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"

[[test]]
name = "test"
harness = false
path = "tests/test.rs"
